--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7276da8489.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Home</title>
+    <title>Vivero Mar de Ajó</title>
 </head>
 <body>
     <nav>
         <div class="container">
             <div class="navwrapp">
                 <div class="logo">
-                 <a href="/"><i class="fas fa-leaf"></i> Vivero<span class="brand"> Mar de ajó</span></a>
+                 <a href="/"><i class="fas fa-leaf"></i> Vivero<span class="brand"> Mar de Ajó</span></a>
                 </div>
                 <div class="links">
                      <div class="wp">
