--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
             </div>
         </div>
     </section>
+    <section class="contacto">
+            <div class="container">
+                <div class="contactowrapp">
+                    <div class="itemwrapp">
+                        <h2>Nuestro Local</h2>
+                        <p>Mar de Ajó 132</p>
+                    </div>
+                    <div class="itemwrapp">
+                        <h2>Redes</h2>
+                        <p>
+                            <a href=""><i class="fab fa-facebook"></i> / viveromardeajo</a>
+                        </p>
+                        <p>
+                            <a href=""><i class="fab fa-instagram"></i> / viveromardeajo</a>
+                        </p>
+                    </div>
+                    <div class="itemwrapp">
+                        <h2>Consultas</h2>
+                        <p>
+                            <a href=""><i class="fab fa-whatsapp"></i> 351 234565</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+    </section>
     <footer>
         <div class="container" 
         style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
